--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -20,9 +21,15 @@
                 <a class="navbar-brand" href="#">Invader</a>
                 <div>
                     <div class="nav-class">
-                        <a class="nav-link active" href="#">Home</a>
-                        <a class="nav-link" href="#">Services</a>
-                        <a class="nav-link" href="#">Contact</a>
+                        <ul>
+                            <li><a  class="active" href="#home">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                        </ul> 
+                        <span class="material-symbols-outlined">
+                            menu
+                        </span>
                     </div>
                 </div>
             </div>
